# prison-agents

./: .pre-commit-config.yaml  Makefile  README.md  pigbutcher_config.yaml  pyproject.toml  simulation_config.yaml  starbound_config.yaml
.github/: README.md
.github/docs/: resources.md
.github/workflows/: lint.yaml
logs/: prison_simulation_log_20250706_142425.md  starbound_diplomacy_log_3_20250706_154938.md  starbound_diplomacy_log_3_20250706_154941.md  starbound_diplomacy_log_3_20250706_154942.md  starbound_diplomacy_log_3_20250706_154945.md  starbound_diplomacy_log_3_20250706_154947.md  starbound_diplomacy_log_3_20250706_154951.md  starbound_diplomacy_log_3_20250706_154956.md
src/: experiment.py  simulation.py
src/agents/: LLMAgent.py
src/simulations/: prison.py
