[project]
requires-python = ">=3.10"
version = "0.0.1"

name        = "prison_agents"
description = "Run the famous Stanford Prison Experiment using AI agents."
readme      = ".github/README.md"
license     = "MIT"

dependencies = [
    "pyyaml",
    "xai-sdk",
]


[project.optional-dependencies]
developer = [
    "bandit",
    "black",
    "hatch",
    "mypy",
    "ruff",
]


[project.scripts]
prison-agents = "experiment:main"


[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml", ".github/README.md"]

